--- a/Finals LAB ACTIVITY 1/src/index.html
+++ b/Finals LAB ACTIVITY 1/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FinalsActivity1</title>
+  <title>MyCrudApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -17,9 +17,8 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
 
-
 </head>
-<body class="mat-typography">
+<body>
   <app-root></app-root>
 </body>
 </html>
